add the toggle to an options menu and rename it

--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -3024,6 +3024,10 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Restore default",             ID_DEBUGGER_DEFCOLOR
     END
+	POPUP "Options"
+	BEGIN
+		MENUITEM "Show Symbol Addresses",       ID_DEBUGGER_INLINE_ADDRESS, CHECKED
+	END
 END
 
 
