rename to restore defaults

--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -3022,7 +3022,7 @@ BEGIN
     POPUP "Colors"
     BEGIN
         MENUITEM SEPARATOR
-        MENUITEM "Restore default",             ID_DEBUGGER_DEFCOLOR
+        MENUITEM "Restore defaults",            ID_DEBUGGER_DEFCOLOR
     END
 	POPUP "Symbols"
 	BEGIN
