--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -3019,6 +3019,14 @@ END
 
 DEBUGGERMENU MENU
 BEGIN
+	POPUP "Options"
+	BEGIN
+		MENUITEM "Auto Open on ROM Load",       ID_DEBUGGER_AUTO_OPEN,         CHECKED
+		MENUITEM "IDA Font",                    ID_DEBUGGER_IDA_FONT,          CHECKED
+		MENUITEM "ROM Offsets",                 ID_DEBUGGER_SHOW_ROM_OFFSETS,  CHECKED
+		MENUITEM SEPARATOR
+		MENUITEM "Reset Window Size",           ID_DEBUGGER_RESTORE_SIZE
+	END
     POPUP "Colors"
     BEGIN
         MENUITEM SEPARATOR
