initial commit for code dumper UI
It looks so derpy!

--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -962,6 +962,22 @@ BEGIN
     GROUPBOX        "Patch Data",108,3,81,292,30
 END
 
+CODEDUMPER DIALOGEX 84, 67, 304, 135
+STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
+CAPTION "Code Dumper"
+FONT 8, "MS Shell Dlg", 0, 0, 0x0
+BEGIN
+    CONTROL         ".Nes File Addresses",ID_DUMPER_NES_ADDR_TOGGLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,12,71,10
+	EDITTEXT       ID_DUMPER_START_ADDR,77,12,47,12,ES_AUTOHSCROLL
+	LTEXT          "-",109, 105,12,10,10
+	EDITTEXT       ID_DUMPER_END_ADDR,140,12,47,12,ES_AUTOHSCROLL
+	GROUPBOX       "Offsets",107, 0,0,200,20
+	LTEXT          "Output: ",108, 7,40,45,12
+	EDITTEXT       ID_DUMPER_FILEPATH,60,40,100,12
+	PUSHBUTTON     "Browse...", ID_DUMPER_BROWSE,170,40,45,12
+	PUSHBUTTON     "Dump",ID_DUMPER_GO,150,60,45,12
+END
+
 GGCONV DIALOGEX 84, 67, 186, 146
 STYLE DS_SYSMODAL | DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Game Genie Encoder/Decoder Tool"
