tweak dumper window in editor

--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -962,20 +962,20 @@ BEGIN
     GROUPBOX        "Patch Data",108,3,81,292,30
 END
 
-CODEDUMPER DIALOGEX 84, 67, 304, 135
+CODEDUMPER DIALOGEX 84, 67, 204, 66
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Code Dumper"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    CONTROL         ".Nes File Addresses",ID_DUMPER_NES_ADDR_TOGGLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,12,71,10
-	EDITTEXT       ID_DUMPER_START_ADDR,77,12,47,12,ES_AUTOHSCROLL
-	LTEXT          "-",109, 105,12,10,10
-	EDITTEXT       ID_DUMPER_END_ADDR,140,12,47,12,ES_AUTOHSCROLL
-	GROUPBOX       "Offsets",107, 0,0,200,20
-	LTEXT          "Output: ",108, 7,40,45,12
-	EDITTEXT       ID_DUMPER_FILEPATH,60,40,100,12
-	PUSHBUTTON     "Browse...", ID_DUMPER_BROWSE,170,40,45,12
-	PUSHBUTTON     "Dump",ID_DUMPER_GO,150,60,45,12
+    CONTROL         ".Nes File Addresses",ID_DUMPER_NES_ADDR_TOGGLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,5,11,77,10
+    EDITTEXT        ID_DUMPER_START_ADDR,85,10,47,12,ES_AUTOHSCROLL
+    LTEXT           "-",109,138,12,10,10
+    EDITTEXT        ID_DUMPER_END_ADDR,147,10,47,12,ES_AUTOHSCROLL
+    GROUPBOX        "Offsets",107,3,1,196,25
+    LTEXT           "Output: ",108,3,30,26,9
+    EDITTEXT        ID_DUMPER_FILEPATH,29,29,114,12
+    PUSHBUTTON      "Browse...",ID_DUMPER_BROWSE,146,30,45,12
+    PUSHBUTTON      "Dump",ID_DUMPER_GO,146,46,45,12
 END
 
 GGCONV DIALOGEX 84, 67, 186, 146
@@ -1961,6 +1961,10 @@ BEGIN
     BEGIN
     END
 
+    "CODEDUMPER", DIALOG
+    BEGIN
+    END
+
     "GGCONV", DIALOG
     BEGIN
     END
@@ -2331,6 +2335,11 @@ BEGIN
 END
 
 ARCHIVECHOOSERDIALOG AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+CODEDUMPER AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
@@ -3035,33 +3044,33 @@ END
 
 DEBUGGERMENU MENU
 BEGIN
-	POPUP "Options"
-	BEGIN
-		MENUITEM "Auto Open on ROM Load",       ID_DEBUGGER_AUTO_OPEN,         CHECKED
-		MENUITEM "IDA Font",                    ID_DEBUGGER_IDA_FONT,          CHECKED
-		MENUITEM "ROM Offsets",                 ID_DEBUGGER_SHOW_ROM_OFFSETS,  CHECKED
-		MENUITEM SEPARATOR
-		MENUITEM "Reset Window Size",           ID_DEBUGGER_RESTORE_SIZE
-	END
+    POPUP "Options"
+    BEGIN
+        MENUITEM "Auto Open on ROM Load",       ID_DEBUGGER_AUTO_OPEN, CHECKED
+        MENUITEM "IDA Font",                    ID_DEBUGGER_IDA_FONT, CHECKED
+        MENUITEM "ROM Offsets",                 ID_DEBUGGER_SHOW_ROM_OFFSETS, CHECKED
+        MENUITEM SEPARATOR
+        MENUITEM "Reset Window Size",           ID_DEBUGGER_RESTORE_SIZE
+    END
     POPUP "Colors"
     BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Restore Defaults",            ID_DEBUGGER_DEFCOLOR
     END
-	POPUP "Symbols"
-	BEGIN
-		MENUITEM "Reload",                      ID_DEBUGGER_RELOAD_SYMBOLS
-		MENUITEM "Load .DEB file",              ID_DEBUGGER_LOAD_DEB_FILE,     CHECKED
-		MENUITEM SEPARATOR
-		MENUITEM "Symbolic Debug",              ID_DEBUGGER_SYMBOLIC_DEBUG,    CHECKED
-		MENUITEM "Show Symbol Addresses",       ID_DEBUGGER_INLINE_ADDRESS,    CHECKED
-		MENUITEM "Default Register Names",      ID_DEBUGGER_DEFAULT_REG_NAMES, CHECKED
-	END
-	POPUP "Tools"
-	BEGIN
-		MENUITEM "ROM Patcher...",              ID_DEBUGGER_ROM_PATCHER
-	    MENUITEM "Code Dumper...",              ID_DEBUGGER_CODE_DUMPER
-	END
+    POPUP "Symbols"
+    BEGIN
+        MENUITEM "Reload",                      ID_DEBUGGER_RELOAD_SYMBOLS
+        MENUITEM "Load .DEB file",              ID_DEBUGGER_LOAD_DEB_FILE, CHECKED
+        MENUITEM SEPARATOR
+        MENUITEM "Symbolic Debug",              ID_DEBUGGER_SYMBOLIC_DEBUG, CHECKED
+        MENUITEM "Show Symbol Addresses",       ID_DEBUGGER_INLINE_ADDRESS, CHECKED
+        MENUITEM "Default Register Names",      ID_DEBUGGER_DEFAULT_REG_NAMES, CHECKED
+    END
+    POPUP "Tools"
+    BEGIN
+        MENUITEM "ROM Patcher...",              ID_DEBUGGER_ROM_PATCHER
+        MENUITEM "Code Dumper...",              ID_DEBUGGER_CODE_DUMPER
+    END
 END
 
 
