fix input handling in dumper dialog

--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -973,7 +973,7 @@ BEGIN
     EDITTEXT        ID_DUMPER_END_ADDR,147,10,47,12,ES_AUTOHSCROLL
     GROUPBOX        "Offsets",107,3,1,196,25
     LTEXT           "Output: ",108,3,30,26,9
-    EDITTEXT        ID_DUMPER_FILEPATH,29,29,114,12
+    EDITTEXT        ID_DUMPER_FILEPATH,29,29,114,12,ES_AUTOHSCROLL
     PUSHBUTTON      "Browse...",ID_DUMPER_BROWSE,146,30,45,12
     PUSHBUTTON      "Dump",ID_DUMPER_GO,146,46,45,12
 END
