add "break on bad opcodes" to menu

--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -3049,6 +3049,8 @@ BEGIN
         MENUITEM "Auto Open on ROM Load",       ID_DEBUGGER_AUTO_OPEN, CHECKED
         MENUITEM "IDA Font",                    ID_DEBUGGER_IDA_FONT, CHECKED
         MENUITEM "ROM Offsets",                 ID_DEBUGGER_SHOW_ROM_OFFSETS, CHECKED
+		MENUITEM SEPARATOR
+		MENUITEM "Break on Bad Opcodes",        ID_DEBUGGER_BREAK_BAD_OPCODES, CHECKED
         MENUITEM SEPARATOR
         MENUITEM "Reset Window Size",           ID_DEBUGGER_RESTORE_SIZE
     END
