--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -3044,6 +3044,7 @@ BEGIN
         MENUITEM "IDA Font",                    ID_DEBUGGER_IDA_FONT, CHECKED
         MENUITEM "ROM Offsets",                 ID_DEBUGGER_SHOW_ROM_OFFSETS, CHECKED
 		MENUITEM SEPARATOR
+		MENUITEM "Show Trace Info",             ID_DEBUGGER_SHOW_TRACE_INFO, CHECKED
 		MENUITEM "Break on Unofficial Opcodes", ID_DEBUGGER_BREAK_BAD_OPCODES, CHECKED
         MENUITEM SEPARATOR
         MENUITEM "Reset Window Size",           ID_DEBUGGER_RESTORE_SIZE
