--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -3036,11 +3036,14 @@ BEGIN
     POPUP "Options"
     BEGIN
         MENUITEM "Auto Open on ROM Load",       ID_DEBUGGER_AUTO_OPEN, CHECKED
+		MENUITEM SEPARATOR
         MENUITEM "IDA Font",                    ID_DEBUGGER_IDA_FONT, CHECKED
         MENUITEM "ROM Offsets",                 ID_DEBUGGER_SHOW_ROM_OFFSETS, CHECKED
-		MENUITEM SEPARATOR
 		MENUITEM "Show Trace Info",             ID_DEBUGGER_SHOW_TRACE_INFO, CHECKED
+		MENUITEM SEPARATOR
 		MENUITEM "Break on Unofficial Opcodes", ID_DEBUGGER_BREAK_BAD_OPCODES, CHECKED
+		MENUITEM "Break on Unlogged Code",      ID_DEBUGGER_BREAK_UNLOGGED_CODE, CHECKED
+		MENUITEM "Break on Unlogged Data",      ID_DEBUGGER_BREAK_UNLOGGED_DATA, CHECKED
         MENUITEM SEPARATOR
         MENUITEM "Reset Window Size",           ID_DEBUGGER_RESTORE_SIZE
     END
