add toggle to show unlogged bytes as data

--- a/src/drivers/win/res.rc
+++ b/src/drivers/win/res.rc
@@ -3045,6 +3045,7 @@ BEGIN
         MENUITEM "IDA Font",                    ID_DEBUGGER_IDA_FONT, CHECKED
         MENUITEM "ROM Offsets",                 ID_DEBUGGER_SHOW_ROM_OFFSETS, CHECKED
 		MENUITEM "Show Trace Info",             ID_DEBUGGER_SHOW_TRACE_INFO, CHECKED
+		MENUITEM "Show Unlogged Bytes as Data"  ID_DEBUGGER_UNLOGGED_AS_DATA, CHECKED
 		MENUITEM SEPARATOR
 		MENUITEM "Break on Unofficial Opcodes", ID_DEBUGGER_BREAK_BAD_OPCODES, CHECKED
 		MENUITEM "Break on Unlogged Code",      ID_DEBUGGER_BREAK_UNLOGGED_CODE, CHECKED
